# photostash

./: .claudeignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPLOYMENT.md  DEPLOY_CHECKLIST.md  Dockerfile  README.md  TODO.md  commitlint.config.js  conftest.py  gunicorn.conf.py  gunicorn.sh  justfile  manage.sh  opencode.json  playwright.ini  pyproject.toml  release.sh
.claude/commands/: djstudio.md
.claude/commands/djstudio/: create-app.md  create-crud.md  create-e2e.md  create-model.md  create-task.md  create-view.md  feedback.md  gdpr.md  launch.md  prelaunch.md  secure.md  translate.md
.github/: dependabot.yml
.github/workflows/: build.yml  checks.yml  default.yml  deploy.yml  docker.yml
config/: settings.py  urls.py
design/: README.md  badges.md  buttons.md  cards.md  forms.md  headers.md  layout.md  lists.md  messages.md  navigation.md  pagination.md  typography.md
docs/: Accessibility.md  Alpine.md  Authentication.md  Django-Tasks.md  Django.md  Docker.md  File-Storage.md  GDPR.md  HTMX.md  Helm-Terraform.md  Local-Development.md  Models.md  Packages.md  Precommit-Linting.md  Production-Email.md  Project-Structure.md  Tailwind.md  Templates.md  Testing.md  UI-Design-Patterns.md  Views.md  k3s-Hetzner-Cloudflare.md
helm/observability/: Chart.yaml  values.secret.yaml.example  values.yaml
helm/site/: Chart.yaml  values.secret.yaml.example  values.yaml
helm/site/templates/: _helpers.tpl  configmap.yaml  django-deployment.yaml  django-worker-deployment.yaml  postgres-pv.yaml  postgres-pvc.yaml  postgres-statefulset.yaml  redis-deployment.yaml  release-job.yaml  secret.yaml
locale/fr/LC_MESSAGES/: django.po
photostash/: context_processors.py  middleware.py  paginator.py  partials.py  templatetags.py  views.py
photostash/db/: search.py
photostash/http/: request.py
photostash/posts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
photostash/posts/migrations/: 0001_initial.py  0002_add_photo.py  max_migration.txt
photostash/posts/tests/: factories.py  fixtures.py  test_models.py  test_playwright.py  test_views.py
photostash/tests/: e2e_fixtures.py  fixtures.py  test_middleware.py  test_paginator.py  test_partials.py  test_templatetags.py  test_views.py
photostash/users/: admin.py  apps.py  models.py  urls.py
photostash/users/migrations/: 0001_initial.py
photostash/users/tests/: factories.py  fixtures.py  test_models.py  test_playwright.py
scripts/: get-kubeconfig.sh  manage.sh  psql.sh
tailwind/: app.css  base.css  buttons.css  forms.css  links.css  messages.css  tweaks.css
templates/: 400.html  403.html  404.html  500.html  about.html  base.html  browse.html  cookie_banner.html  error_base.html  form.html  grid.html  home.html  markdown.html  messages.html  navbar.html  paginate.html  privacy.html  sidebar.html
templates/account/: account_inactive.html  confirm_email_verification_code.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  reauthenticate.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
templates/form/: field.html
templates/posts/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  post_photos.html
templates/socialaccount/: authentication_error.html  connections.html  login.html  login_cancelled.html  login_redirect.html  signup.html
terraform/cloudflare/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/hetzner/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/storage/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
